--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,8 @@
   src: url("./fonts/Product\ Sans\ Italic.ttf");
 }
 
-body {
+body,
+html {
   margin: 0;
   padding: 0;
   font-family: "Product Sans Regular", sans-serif;
